--- a/Scratch Files/Model Version Control/Model Code 28_02_2018.ipynb
+++ b/Scratch Files/Model Version Control/Model Code 28_02_2018.ipynb
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1003,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1025,11 +1025,11 @@
       "4  0.520601  0.418417   1  0.521654   ...      0.551954  0.626279       0   \n",
       "\n",
       "   T5xbin  T3xbin  IndDivision  Manufacturing  Other  Services  labels  \n",
-      "0       1       1     Services              0      0         1       1  \n",
-      "1       2       3     Services              0      0         1       0  \n",
-      "2       3       1     Services              0      0         1       1  \n",
-      "3       2       3     Services              0      0         1       0  \n",
-      "4       2       3     Services              0      0         1       0  \n",
+      "0       1       1     Services              0      0         1       0  \n",
+      "1       2       3     Services              0      0         1       1  \n",
+      "2       3       1     Services              0      0         1       0  \n",
+      "3       2       3     Services              0      0         1       1  \n",
+      "4       2       3     Services              0      0         1       1  \n",
       "\n",
       "[5 rows x 44 columns]\n"
      ]
@@ -1041,7 +1041,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#x.to_csv('Model 28_02_18.csv')\n",
+    "x.I2=x.I2.str.replace(',', '')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     I1                           I2    I3    P(IPO)    P(H)    P(L)  \\\n",
+      "0    RA         RAILAMERICA INC /DE   4011  0.500000  0.6875  0.6875   \n",
+      "1     G                 Genpact LTD   8742  0.458333  0.6875  0.6875   \n",
+      "2  HURN  Huron Consulting Group Inc.  8742  0.500000  0.5625  0.5625   \n",
+      "3  ICFI      ICF International Inc.   8742  0.375000  0.5625  0.5625   \n",
+      "4  SRVY       GREENFIELD ONLINE INC   8742  0.416667  0.5000  0.5000   \n",
+      "\n",
+      "    P(1Day)        C1  C2        C3   ...    perOffered       P/E  C6xbin  \\\n",
+      "0  0.382795  0.327835   1  0.566929   ...      0.713752  0.768255       0   \n",
+      "1  0.466314  0.360190   1  0.545276   ...      0.290540  0.919586       0   \n",
+      "2  0.526169  0.623910   1  0.480315   ...      0.557648  0.374358       0   \n",
+      "3  0.341036  0.585622   1  0.551181   ...      0.646033  0.797414       0   \n",
+      "4  0.520601  0.418417   1  0.521654   ...      0.551954  0.626279       0   \n",
+      "\n",
+      "   T5xbin  T3xbin  IndDivision  Manufacturing  Other  Services  labels  \n",
+      "0       1       1     Services              0      0         1       0  \n",
+      "1       2       3     Services              0      0         1       1  \n",
+      "2       3       1     Services              0      0         1       0  \n",
+      "3       2       3     Services              0      0         1       1  \n",
+      "4       2       3     Services              0      0         1       1  \n",
+      "\n",
+      "[5 rows x 44 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x.head(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
